--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.illiouchine.mviapplication"
         minSdk 22
         targetSdk 30
         versionCode 1
@@ -30,27 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-
-// KTX
-    implementation "androidx.core:core-ktx:1.5.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
-    implementation "androidx.activity:activity-ktx:1.3.0-beta02"
+    implementation "androidx.activity:activity-ktx:1.4.0-beta01"
 
 
     testImplementation 'junit:junit:4.+'
