--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,11 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
-    implementation "androidx.activity:activity-ktx:1.4.0-beta01"
+    implementation "androidx.activity:activity-ktx:1.4.0"
 
 
     testImplementation 'junit:junit:4.+'
